# qWells

qwells/: contributors.txt
qwells/src/: CMakeLists.txt  centralWindow.cpp  centralWindow.h  helperFunctions.h  io.h  license.cpp  license.h  main.cpp  mainMenu.cpp  mainMenu.h  qWells.cpp  qWells.h  qWells.qrc.depends  qWells_0.1.4_automoc.cpp  qwells.pro
qwells/src/dialogs/: about.cpp  about.h  message.cpp  message.h
qwells/src/engine/: boundary.h  data.cpp  data.h  modelInformation.h  position.h  superPos.cpp  superPos.h  twoDgeom.h  well.h
qwells/src/interactionTab/: interactionTab.cpp  interactionTab.h
qwells/src/interactionTab/muT/: tMuSliderFrame.cpp  tMuSliderFrame.h  valueForTMuSlider.cpp  valueForTMuSlider.h
qwells/src/interactionTab/tabbedTools/: tabbedTools.cpp  tabbedTools.h
qwells/src/interactionTab/tabbedTools/adjusterTab/: adjuster.cpp  adjuster.h  boundaryAdjuster.cpp  boundaryAdjuster.h  wellWearAdjuster.cpp  wellWearAdjuster.h
qwells/src/interactionTab/tabbedTools/adjusterTab/boundaryAdjuster/: distanceSlider.cpp  distanceSlider.h  distanceValue.cpp  distanceValue.h  maxDistanceSlider.cpp  maxDistanceSlider.h  maxDistanceValue.cpp  maxDistanceValue.h
qwells/src/interactionTab/tabbedTools/adjusterTab/wellWearAdjuster/: wearSlider.cpp  wearSlider.h  wearValue.cpp  wearValue.h
qwells/src/interactionTab/tabbedTools/chooserTab/: piezoChooserFrame.cpp  piezoChooserFrame.h  plotChooser.cpp  plotChooser.h  wellChooserFrame.cpp  wellChooserFrame.h
qwells/src/parameterTab/: .directory  boundaryWidget.cpp  boundaryWidget.h  dataTableSize.h  parameterTab.cpp  parameterTab.h  tableSize.h  wellPiezoTab.cpp  wellPiezoTab.h
qwells/src/parameterTab/boundaryWidget/: .directory  boundaryDataFrame.cpp  boundaryDataFrame.h  potentialComboBox.cpp  potentialComboBox.h
qwells/src/parameterTab/picture/: lineEditSetBoundary.cpp  lineEditSetBoundary.h  painterWidget.cpp  painterWidget.h
qwells/src/parameterTab/piezoTab/: .directory  piezoDataTable.cpp  piezoDataTable.h  piezoTab.cpp  piezoTab.h  piezoTable.cpp  piezoTable.h
qwells/src/parameterTab/wellsTab/: .directory  wellsDataTable.cpp  wellsDataTable.h  wellsTab.cpp  wellsTab.h  wellsTable.cpp  wellsTable.h
qwells/src/printTab/: printTab.cpp  printTab.h
qwells/src/result/: finalParameters.cpp  finalParameters.h  result.cpp  result.h  staticLevel.cpp  staticLevel.h
qwells/src/settings/: plotSettings.cpp  plotSettings.h  settings.cpp  settings.h  tableSettings.cpp  tableSettings.h  timeUnitSettings.cpp  timeUnitSettings.h
qwells/src/visualizationTab/: \  isoList.cpp  isoList.h  visData.cpp  visData.h  visPicture.cpp  visPicture.h  visResult.cpp  visResult.h  visualizationTab.cpp  visualizationTab.h
qwells/src/visualizationTab/linesTabs/: isoDataTab.cpp  isoDataTab.h  streamDataTab.cpp  streamDataTab.h  tabs.cpp  tabs.h
qwells/src/widgets/: .directory  doubleValue.cpp  doubleValue.h  minMaxDoubleValue.cpp  minMaxDoubleValue.h
qwells/src/widgets/qcustomplot/: qcustomplot.cpp  qcustomplot.h  qwellsPlot.cpp  qwellsPlot.h
qwells/src/widgets/tabTools/: collapsingBar.cpp  collapsingBar.h  tabToolBase.cpp  tabToolBase.h
qwells/src/widgets/tables/: imExFrame.cpp  imExFrame.h  lineEdit.cpp  lineEdit.h  wellPiezoDataTable.cpp  wellPiezoDataTable.h  wellPiezoTable.cpp  wellPiezoTable.h
